syntax = "proto3";
package discount;

service DiscountService {
    rpc GetDiscount (DiscountRequest) returns (DiscountResponse);
}

message Discount {
    float percentage = 1;
}

message DiscountRequest {
    string user_id = 1;
    string product_id = 2;
}

message DiscountResponse {
    Discount discount = 1;
}
